public/assets/css/main.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 3rem;
  color: #5a5a5a;
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  padding-bottom: 40px;
  color: #5a5a5a;
}


#s{
  color:white;
}


#carouselExampleIndicators {
  position: absolute;
  z-index: -1;
}

#searchBar {
padding : 250px;

}

#verificationPage{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}

#userPostedProducts{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}

#individualProductDetails{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}


#productDetails{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}


#userProfileSettigs{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}

#requestButton {
margin-top : 50px;
}


#categoriesLink{
  margin : auto;
}

#productRequestContainer{
  border: 1px dashed #ddd;
  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
  padding: 25px;
  margin-top: 50px;
  background-color: rgba(221, 220, 220, 0.323);
}

#postProductContainer{
border: 1px dashed #ddd;
box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
padding: 25px;
margin-top: 50px;
background-color: rgba(221, 220, 220, 0.323);
}

/* nav bar serach bar  */

#nav-search-wrapper {
  width: 50%;
  height: 100%;
  display: inline-block;
  margin-left: 200px;
}

#nav-search-wrapper form input{
  padding: 10px 10px 10px 52px;
  width:100%;
}

li {
  list-style: none;
}


/* List Grid view  */

.thumbnail
{
  margin-bottom: 20px;
  padding: 0px;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
}

.item.list-group-item
{
  float: none;
  width: 5%;
  backgrou5d-color: #fff;
  margin-bottom: 10px;
}
.item.lis50group-item:nth-of-type(odd):hover,.item.list-group-item:hover
5
  background: #428bca;
}

.item.list-group-item .list-group-image
{
  margin-right: 10px;
}
.item.list-group-item .thumbnail
{
  margin-bottom: 0px;
}
.item.list-group-item .caption
{
  padding: 9px 9px 0px 9px;
}
.item.list-group-item:nth-of-type(odd)
{
  background: #eeeeee;
}

.item.list-group-item:before, .item.list-group-item:after
{
  display: table;
  content: " ";
}

.item.list-group-item img
{
  float: left;
}
.item.list-group-item:after
{
  clear: both;
}
.list-group-item-text
{
  margin: 0 0 11px;
}


/* RESPONSIVE CSS
-------------------------------------------------- */
@media (max-width: 768px) {

  .carousel-inner>.item>img, .carousel-inner>.item>a>img {
    max-width:inherit;
  }

  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }
}





/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 1.5rem;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: .75rem;
  margin-left: .75rem;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -.05rem;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 1.25rem;
    font-size: 1.25rem;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
    margin-top: 7rem;
  }
}

#uploadPhoto {
  border: 1px dashed blue;
  margin-top: 50px;
}

a.navbar-brand {
  padding-left: 20px;
}

.center-block {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#previewPic1{
  width: 200px;
  height: 150px;
}
#previewPic2{
  width: 200px;
  height: 150px;
}
#userproductpic2{
  width: 200px;
  height: 200px;
}
#userproductpic1{
  width: 200px;
  height: 200px;
}
#profilePicProfile{
  width: 400px;
  height: 300px;
}
#photosForAll2{
  width: 150px;
  height: 100px;
}
#photosForAll{
  width: 150px;
  height: 100px;
}

